# SkinLens

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  Dockerfile.engine  Dockerfile.web  MANIFEST.in  PROJECT_OVERVIEW.md  README.md  SkinLens_v1_GUI통합_AnalysisService_설계.md  SkinLens_v1_Parts_Review.md  SkinLens_v1_코드리뷰.md  TEST_REPORT.html  docker-compose.engine.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-gui.txt  requirements.txt  run_all_tests.py  run_engine_server.py  skin_analysis_report_20260609_203835.html  skin_analysis_report_20260609_213104.html  skin_analysis_report_20260609_213309.xlsx  skin_analysis_report_20260609_220137.html  skin_analysis_report_20260609_220947.html  skin_analysis_report_20260609_221957.html  skin_analysis_report_20260609_222228.xlsx
config/: config.json  docker.env.example
docs/: AB_TESTING_FRAMEWORK_DESIGN.md  ANALYSIS_RESULT_SHARING_DESIGN.md  API_GUIDE.md  APP_FEATURE_RECOMMENDATIONS.md  ARCHITECTURE_GUIDE.md  AUTO_RECOVERY_DESIGN.md  AUTO_SCALING_DESIGN.md  DESIGN_reference_guided_scoring.md  DEVELOPMENT_GUIDE.md  DIAGNOSIS_FEEDBACK_LOOP_DESIGN.md  EXTERNAL_SYSTEM_INTEGRATION_GUIDE.html  EXTERNAL_SYSTEM_INTEGRATION_GUIDE.md  GDPR_COMPLIANCE_DESIGN.md  IMPROVEMENT_PLAN.md  INTEGRATION_TEST_GUIDE.md  JSON_IO_FLOW.html  JSON_IO_FLOW.md  MOBILE_APP_GUIDE.md  MULTI_IMAGE_ANALYSIS_DESIGN.md  MULTI_LANGUAGE_SUPPORT_DESIGN.md  PRESCRIPTION_EFFECT_PREDICTION_DESIGN.md  PRESCRIPTION_GUIDE.md  PRICE_FILTER_DESIGN.md  PRODUCT_PURCHASE_GUIDE.html  README.md  (+19 more)
(+424 files in other folders)
