[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skinlens"
version = "1.0.0"
description = "AI-powered skin analysis engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [
    {name = "CÔTELEAF"}
]
keywords = ["skin", "analysis", "ai", "computer-vision", "dermatology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/coteleaf/skinlens"
Documentation = "https://github.com/coteleaf/skinlens/docs"
Repository = "https://github.com/coteleaf/skinlens"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]
